[tool.poetry]
name = "pdf-easyjump"
version = "0.1.0"
description = "a small tool to embed/extract outline (table of contents) & page labels to/from PDF document"
authors = ["Masahiro Kiyota <hiro@juzbox.com>"]
license = "MIT"


[tool.poetry.scripts]
pdf-ezjmp = 'pdf_easyjump.entry:run'

[tool.poetry.dependencies]
python = "^3.7"
pikepdf = "^1.19.3"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
